A11y: a11y fixes minor contrast

--- a/css/style.css
+++ b/css/style.css
@@ -1140,7 +1140,7 @@ a.btn {
 }
 
 /* Page select */
-.select-goto option, #contrastSelect,#current,#total, #tocP.select-goto {
+.select-goto option, #contrastSelect,#current,#total, #tocp.select-goto, select#tocP.select-goto {
 	color: black;
 	background-color: #fff;
 }
